<resources>
    <string name="app_name">GiSer</string>
    <string name="name_pengguna">Name</string>
    <string name="usrname">username</string>
    <string name="location">Location</string>
    <string name="lctn">Location</string>
    <string name="rpstry">Repository</string>
    <string name="prshn">Company</string>
    <string name="lorem">Username</string>
    <string name="search">Enter Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Followers">FOLLOWERS</string>
    <string name="Following">FOLLOWING</string>
</resources>