<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_dtlavtr"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="9dp"
        android:src="@android:color/darker_gray"
        app:civ_border_color="#FF909090"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txt_dtlname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/name_pengguna"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_dtlavtr"/>

    <TextView
        android:id="@+id/txt_dtluname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/usrname"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dtlname"/>


    <TextView
        android:id="@+id/txt_lctn"
        android:fontFamily="sans-serif-light"
        android:textColor="#000000"
        tools:text="@string/lctn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_dtluname"/>

    <TextView
        android:id="@+id/txt_rpstry"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textColor="#000000"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_lctn"
        tools:text="@string/rpstry" />

    <TextView
        android:id="@+id/txt_cmpny"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textColor="#000000"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_rpstry"
        tools:text="@string/prshn" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?actionBarSize"
        app:layout_constraintTop_toBottomOf="@+id/txt_cmpny"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabRippleColor="@null"
        tools:ignore="MissingConstraints"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="375dp" />

</androidx.constraintlayout.widget.ConstraintLayout>